--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="distancia">Distância</string>
     <string name="preco">Preço</string>
     <string name="autonomia">Autonomia</string>
+    <string name="total_de_quilometros">Total de Quilômetros</string>
+    <string name="preco_por_litro">Preço por litro</string>
+    <string name="km_por_litro">Km por litro</string>
+    <string name="seu_gasto_total_sera_de">seu gasto total será de:</string>
 </resources>
