--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
     <string name="app_name">MyTrip</string>
     <string name="valores_validos">Por favor, informe valores válidos!</string>
     <string name="calcular">calcular</string>
-    <string name="label_cash">R$ 0,00</string>
+    <string name="label_cash">R$ 0.00</string>
     <string name="distancia">Distância</string>
     <string name="preco">Preço</string>
     <string name="autonomia">Autonomia</string>
-    <string name="total_de_quilometros">Total de Quilômetros</string>
-    <string name="preco_por_litro">Preço por litro</string>
+    <string name="total_quilometros">Total de Quilômetros</string>
+    <string name="preco_litro">Preço por litro</string>
     <string name="km_por_litro">Km por litro</string>
-    <string name="seu_gasto_total_sera_de">seu gasto total será de:</string>
+    <string name="gasto_total">seu gasto total será de:</string>
 </resources>
